--- a/core/pom.xml
+++ b/core/pom.xml
@@ -2,9 +2,12 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>io.pivotal.spring.cloud</groupId>
+  <parent>
+    <groupId>io.pivotal.spring.cloud</groupId>
+    <artifactId>spring-cloud-services-security</artifactId>
+    <version>1.0.0.BUILD-SNAPSHOT</version>
+  </parent>
   <artifactId>spring-cloud-services-jose-core</artifactId>
-  <version>1.0.0.BUILD-SNAPSHOT</version>
   <packaging>jar</packaging>
   <name>Spring Cloud Services JOSE Core</name>
   <description>Spring Cloud Services JOSE Core</description>
