--- a/pom.xml
+++ b/pom.xml
@@ -8,12 +8,33 @@
   <packaging>pom</packaging>
   <name>Spring Cloud Services Security</name>
   <description>Spring Cloud Services Security</description>
+  <url>https://github.com/pivotal-cf-experimental/spring-cloud-services-security</url>
+
+  <licenses>
+    <license>
+      <name>The Apache Software License, Version 2.0</name>
+      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+      <distribution>manual</distribution>
+    </license>
+  </licenses>
+
+  <contributors>
+    <contributor>
+      <name>William Tran</name>
+      <email>wtran@pivotal.io</email>
+    </contributor>
+  </contributors>
   
+  <scm>
+    <url>https://github.com/pivotal-cf-experimental/spring-cloud-services-security</url>
+    <connection>scm:git:git://github.com/pivotal-cf-experimental/spring-cloud-services-security</connection>
+    <developerConnection>scm:git:git://github.com/pivotal-cf-experimental/spring-cloud-services-security</developerConnection>
+  </scm>
+
   <modules>
     <module>core</module>
     <module>spring</module>
   </modules>
-  
 
   <build>
     <plugins>
